# scraping_idealista

./: Makefile  README.md  alembic.ini  docker-compose.yaml  env.env  main.py  pyproject.toml  settings.py
crawler/: credentials.py  distritos.py  es_crawler.py  idealista_crawler.py  idealista_parser.py  pt_crawler.py
crawler/parsers/: abs_parser.py  es_parser.py  idealista_parser.py  pt_parser.py
data/db_orm/: connection.py  init_database.py  query_obj.py
data/db_orm/alembic/: env.py
data/db_orm/alembic/versions/: 0417e99338cd_.py  613ee3c11a71_.py  b5b626d4f023_.py  db44db7ba10e_.py
data/db_orm/tables/: __init__.py  tbl_houses.py
data/dto/: house.py
data/repository/: house_repository.py
